--- a/gnews/1.md
+++ b/gnews/1.md
@@ -1,61 +1,190 @@
 ---
-title: 让瑞银伦敦正式立案的英国大法官，也是一位畅销书作家
+title: 美国将在经济危机后有新的腾飞
 ---
-`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1994524/)
+`洛杉矶盘古农场 HIMALAYA LA PANGU` [轉載自GNews](https://gnews.org/zh-hans/1994577/)
 
-作者/编辑：文泓
+[https://gtv.org/video/id=6205b61db0af02660af2311b](https://gtv.org/video/id=6205b61db0af02660af2311b)
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/02/法官.png)图片来源：TopFoto & Twitter
+所以这次经济危机会让美国一次新的腾飞
+Por eso EE. UU tendrá un nuevo despegue tras la crisis económica de esta vez
 
+但是不要忘了
+Pero no olviden
 
-2月9日的文贵大直播注定载入史册。当节目进行到1小时50分钟时，在郭先生收到一条手机信息后，抑制不住内心的激动振臂一呼，耶！原来是郭先生诉瑞银（UBS）海通证券股票投资的案子，自2015年起，历时七年终于在英国伦敦法院正式立案。郭先生评价，这是打响了新中国联邦直面沼泽地的第一仗，意义非凡。**当日敲下法官槌的是一位英国大法官萨拉·科克瑞尔（Sara Cockerill）**。
+这就是美国的另外的一面, 资本市场的残忍
+Esta es la otra cara de EE. UU, la crueldad del mercado capital
 
-关于此案完成英国申请立案的过程，有媒体零星的报道，对此案稍有涉猎：
-英国高等法院法官周三的裁决，意味着这位中国富商对瑞银提起的诉讼可以进入审判程序。大法官萨拉·科克瑞尔周三裁定，“**事实是，法院将调查的损失，肯定是由瑞银伦敦在2015年7月6日至8日期间的行为当时在伦敦造成的。至少有一种分析认为，损失发生在那里。这本身就产生了一个联系点**”。
+它每次经济危机之后
+Luego de cada crisis económica
 
-就此，萨拉·科克瑞尔大法官进入爆料革命战友视线。今天我们期待通过对科克瑞尔大法官生平爱好的介绍，执业经历的分析，还原出一个有血有肉的充满正义感的大法官。
+会把所谓一些大佬们
+Eliminarán a los llamados Boss
 
-萨拉·科克瑞尔在伦敦北郊清福德的一所小学接受教育，然后获得全额奖学金进入汉普顿的埃莉诺·霍勒斯夫人私立中学；接下来她在牛津大学圣安妮学院学习法律，1989年获得法学一等学位，并获得牛津的埃尔登奖学金。
+所谓英雄们淘汰掉, 非常残忍
+Y a los héroes, es muy cruel
 
-在1990年她获得律师资格，1991年至2017年在商业律师协会执业，在各种法院和仲裁庭的国际商法方面积累了丰富的经验。在2011年被任命为女王大律师（该荣誉头衔旨在表彰对法律专业或公共生活做出重大贡献的律师）。她擅长包括航运和国际贸易交易、保险和再保险索赔、法律冲突和民事诉讼中的强制证据所引起的一系列争议。她也是《民事诉讼中的强制证据的法律与事务》（2012出版）一书的作者。
+你现在很难想起来美国在过去二三十年所谓的
+Ahora se te hace difícil recordar en los pasados 20 a 30 años EE. UU
 
-在被任命大法官之前，她在各种仲裁程序中担任仲裁员，并自2016年起担任商事法庭和行政法院的副高等法院法官。2017年首席大法官指派科克瑞尔大法官到王座法庭担任商业法庭的提名法官，科克瑞尔大法官于2017年11月1日16时45分由首席大法官宣誓就职。
+科技大佬
+Los Boss de la tecnología
 
-工作之余，科克瑞尔又是一位深谙英国中世纪历史的文艺青年，她的志愿是成为一名历史学家，这让她在业余时间笔耕不辍。她的两本反映中世纪英国王室的传记小说《卡斯蒂利亚埃莉诺传记》于2014年出版，《阿基坦的埃莉诺传记》于2019年出版。后者入围著名英国历史畅销书作家丹·琼斯推荐2019年50本最佳历史书籍之一（书籍如下图）。
+你给我数几个
+Sácame la cuenta
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/02/811-1.png)图片来源：bookdepository.com
+我看看, 你能数出几个出来
+Voy a ver cuántos puedes contar
 
+你数不出来, 美国人都忘记
+No lo podrás contar, si hasta los mismos estadounidenses lo olvidaron
 
-从其出色的律政履历和独特的历史作家背景来看，科克瑞尔绝对是一个不可多得的专才。在专业的法官工作中，大法官的出手绝对不容小觑：
+这个国家只往前看, 从来不往后看
+Este país sólo mira hacia adelante, nunca hacia atrás
 
-2020年11月23日，一名伦敦法官周一驳回了一项诉讼，指控苏格兰皇家银行在未经适当授权的情况下签发价值数千英镑的支票；
+所以在美国这个国家, 很少人说后悔这个词
+Por eso en EE. UU, pocas personas mencionan la palabra “arrepentimiento”
+在美国这个国家也很少人说
+En EE. UU muy pocas personas lo dicen
 
-2021年8月12日，英国政府被指控非法补贴化石燃料，主审法官科克瑞尔；
+Unfair就是不公平
+Unfair es injusticia
 
-2022年1月月21日，法官萨拉·科克瑞尔在高等法院表示，律师纪律法庭去年年初将托尼·吉斯从律师名单中剔除是正确的。
+很少人说, 不像中国人, 啥都不公平
+Pocas personas lo dicen, no como los chinos que les parece injusto cualquier cosa
 
-西方国家的司法独立起始于1701年英国颁布《和解法案》，自该法案以后，只有通过议会两院签署《致女王书》，才有可能将高级法官免职。郭先生在大直播中，对美国的司法独立深信不疑。
+这国家就是胜者王侯败者寇
+En este país, el vencedor es el rey y el perdedor es el bandido
 
-经过上述的脉络梳理，我们对科克瑞尔大法官有了一些感性的认识，我们相信，上天正在眷顾爆料革命。当爆料革命进入攻坚阶段，地球人都知道瑞银在金融圈地位和资金实力，但就有一位极富正义感的英国大法官站了出来助力新中国联邦。
+你别扯淡, 都往前看
+No digas tonterías, miran hacia adelante
 
-经过郭先生不断地启蒙和开智，现在我们知道，UBS瑞银是决定世界命运的沼泽地势力以及中共盗国贼家族重要的财富聚集地，该金融帝国内隐藏着数百年来所累积的上百万亿美元财富和黑账。期待此案在伦敦立案后，未来在全球正义力量的帮助下，撬开瑞银的秘密数据库大门，找回中共盗国贼在西方藏匿的巨额资产，打开灭共的最后一道大门。
+这个国家是每次经济危机之后
+Este país, después de pasar por cada crisis económica
 
-参考链接：
-1、[Mrs Justice Cockerill | Courts and Tribunals Judiciary](https://www.judiciary.uk/publications/mrs-justice-cockerill/)
-2、[Sara Cockerill Author homepage](https://www.saracockerill.com/)
-3、[Simon Bryan QC and Sara Cockerill QC Appointed as Justices of the High Court – Essex Court Chambers](https://essexcourt.com/simon-bryan-qc-sara-cockerill-qc-appointed-justices-high-court/)
-4、[London Judge Greenlights Chinese Billionaire’s Case Against UBS (wealthbriefing.com)](https://www.wealthbriefing.com/html/article.php?id=193674)
-5、[Current Judges (commercialcourt.london)](https://www.commercialcourt.london/current-judges)
-6、[Subscribe to read | Financial Times (ft.com)](https://www.ft.com/content/3e9c5459-cda0-4209-9b81-18fc1dbf51f5)
-7、[UK government accused of illegally subsidising fossil fuels | Euronews](https://www.euronews.com/green/2021/12/08/uk-government-accused-of-illegally-subsidising-fossil-fuels)
-8、[Independence | Courts and Tribunals Judiciary](https://www.judiciary.uk/about-the-judiciary/the-judiciary-the-government-and-the-constitution/jud-acc-ind/independence/#:~:text=The%20fundamental%20concept%20of%20judicial,hold%20office%20during%20good%20behaviour.)
+财富转移完又来一波, 科技升新把老的干掉一波
+Después de la transferencia de riqueza viene otra ola, la nueva tecnología matará a la antigua
 
-发布：文泓
-更多资讯，请关注：
-[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/76QVRChsgU)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+当年我在旧金山
+Estuve en San Francisco en aquel año
+
+我认识了咱们华人的几个所谓大佬
+Conocí a nuestros algunos llamados Boss chinos
+
+费正清当年就是美国
+En aquel año, Fei Zhengqing en EE. UU
+
+就是知中派, 他的下边这帮人
+Era quien sabía todo de China, la gente debajo de él
+
+我跟他们打交道
+Tenía contactos con ellos
+
+我就一个最大的感受
+Tenía el mayor sentimiento
+
+我每次到旧金山来
+Cada vez que iba a San Francisco
+
+跟这帮人接触都有一帮
+Hay una pandilla en contacto con este grupo de personas
+
+年轻人的介入, 都是小孩学生
+La intervención de los jóvenes y todos son estudiantes
+
+你再次来时候这些学生都走了
+Cuando ibas de nuevo, ya estos estudiantes se fueron
+
+都去成功了
+Todos salieron con éxito
+
+后来这些人我发现都去了哪儿
+Luego me dí cuenta a donde se fueron esta gente
+
+就是后来的Facebook, 谷歌, Youtube
+Es lo que ahora sabemos, Facebook, Google, Youtube
+
+推特
+Twitter
+
+都去发财了, 都走了
+Todos fueron a hacerse ricos
+
+然后那些老人家还在, 还在那儿呢
+Y esos viejos todavía están, ¿dónde están?
+
+还搞中美关系呢
+Todavía estaban revolviendo las relaciones chino-estadounidense
+
+后来我明白了
+Luego comprendí
+
+在美国说玩政治是最傻的, 一帮傻货
+Los que juegan con la política en EE. UU son los más tontos, un montón de tontos
+
+最笨的一帮笨蛋, 聪明人
+Son un grupo de idiotas más idiotas, gente inteligente
+
+全都搞玩政治就去搞钱去了, 所以在美国这个
+Luego de jugar a la política, se dirigen a ganar dinero, por eso en EE. UU
+
+国家你能看得出来搞政治的一帮都是傻球货
+Puedes notar los que salen a participar en la política son unos tontos
+
+都是没什么本事的人, 有本事都是
+Son aquellos que no tienen capacidad, los que son capaces
+
+搞钱搞技术, 搞哲学去了
+Ya fueron a enfocarse en el dinero, la tecnología y la filosofía
+
+所以说这次
+Por eso esta vez
+
+美国好莱坞大洗牌, 科技大洗牌
+Habrá un gran barajado en el Hollywood de EE. UU y en la tecnología
+
+经济大洗牌, 然后美国会
+Gran barajado de economía, después EE. UU
+
+让很多人包括战友当中, 绝大多数的美国人
+Hará que muchas personas incluyendo a los compañeros luchadores, la mayoría de los estadounidenses
+
+会一贫如洗
+Se empobrezcan
+
+因为你跟不上形势
+Porque no puedes seguir el ritmo de la situación
+
+你跟不上形势了就没你的了
+Si no logras seguir el ritmo de la situación, esto no será tuyo
+
+然后剩下以后就是世界的科技大腾飞
+Y lo que queda es el gran despegue tecnológica del mundo en un futuro
+
+生物科技、量子电脑、太空科技、新型材料
+Biotecnología, computadora cuántica, tecnología espacial, nuevos materiales
+
+一切都将改变
+Todo va a cambiar
+
+* * *
+
+日期：02/10/2022
+原视频标题：美国将在经济危机后有新的腾飞
+Estados Unidos tendrá un nuevo despegue tras la crisis económica
+原视频日期：02/07/2022
+原视频网址：[**https://gettr.com/post/psyunve420**](https://gettr.com/post/psyunve420)
+任务编号：KC452(3696)
+视频时间段：0:00-02:18
+西听校：洛杉矶盘古农场- 霙霙（文霙）
+翻译：洛杉矶盘古农场- 小文萱
+翻译终校：洛杉矶盘古农场- 霙霙（文霙）
+字幕+视频制作：洛杉矶盘古农场-天涯行
+审片：洛杉矶盘古农场-银龙
+发布：洛杉矶盘古农场-恩典
+[![](https://assets.gnews.org/wp-content/uploads/2021/03/WhatsApp-Image-2021-06-26-at-22.05.30.jpeg)](https://discord.gg/2vuvRm7z6U)
+洛杉矶盘古农场欢迎您加入:(或点击上方图片）
+
+[https://discord.gg/2vuvRm7z6U](https://discord.gg/2vuvRm7z6U)
 
  
 
