--- a/gnews/2.md
+++ b/gnews/2.md
@@ -1,25 +1,54 @@
 ---
-title: 中日财经爆┃“宁王”失宠
+title: 北京冬奥会成中共献丑会
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1994515/)
+`澳喜农场` [轉載自GNews](https://gnews.org/zh-hans/1994544/)
 
-撰稿：东京樱花团/华夏伊人
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-1194.png)[图片来源](https://www.google.com/imgres?imgurl=https%3A%2F%2Fx0.ifengimg.com%2Fres%2F2021%2F8F38AC2D527E94536D36FEB0AB6E689ABE840E9F_size113_w998_h614.jpeg&amp;imgrefurl=https%3A%2F%2Fwww.tiantian9527.com%2Fnews%2F23029371.html&amp;tbnid=oUuhXRUz7Dj4HM&amp;vet=12ahUKEwi88Oj_5fn1AhUKspQKHe1-DCcQMygCegUIARC9AQ..i&amp;docid=ma88AApCqfAHHM&amp;w=998&amp;h=614&amp;q=%E5%AE%81%E5%BE%B7%E6%97%B6%E4%BB%A3&amp;ved=2ahUKEwi88Oj_5fn1AhUKspQKHe1-DCcQMygCegUIARC9AQ)
-2月10日，宁德时代开盘1小时跌幅超过8%，盘中加速下跌，最大跌幅达9%，股价跌破500元整数关口，成交量超100亿，市值蒸发1000亿。春节后四个交易日已经下跌近15%，市值蒸发2000亿元，股价创去年10月以来新低。
+撰稿：一碗兰州（文远）
+![](https://assets.gnews.org/wp-content/uploads/2022/02/Slide1-12.jpg)图片来自网络
+“献丑了”原是一种谦逊的说辞，而在这次北京冬奥会上，中共国实打实地上演了一出“以武会友”，将对待中国人民的丑陋手段的亿分之一用在了“外国友人”身上，打了洋大人们一个猝不及防，给他们上了一节生动的“以警治国”课，希望由此使得他们认清中共的流氓本质。
 
-2022年1月，宁德时代发布的业绩预告称，其去年净利润为140亿元——165亿元之间，同比增长150%——195%，这是宁德时代上市以来的最高利润水平。2022年各大机构更是对其盈利预期看到300亿元的净利润。
+中共国向来对新闻自由十分畏惧，将国内的高压舆论管控政策用在外国媒体身上，严格控制外国媒体的报道活动，外媒稍有不慎就会遭到干扰、阻拦，甚至受到暴力威胁。
 
-尽管业绩增幅超预期，机构也给了很高的评价，为什么股价不涨反跌呢？现在，不仅仅是资金面对宁德时代不友好，就连消息面也开始唱衰：可能遭到美国制裁、核心客户“出逃”、新的储能解决方案出现等等。
+荷兰广播公司NOS记者斯乔尔德·邓·达斯（Sjoerd den Daas）在北京街头进行直播报道时，突然被一名戴着“公共安全志愿者”（Public Safety Volunteer）红色袖章的中共安保人员粗暴地推走，其摄影灯也在被阻止直播后立刻遭到拆除。上述画面被全程直播了出去，与达斯进行直播连线的荷兰电视台女主持人一脸惊恐，不知所措，NOS电视台随即将画面切回了主播间。
 
-宁德时代在资本市场也比较受欢迎，去年三季度宁德时代还一举超过了茅台成为公募基金的头号重仓股，也是各大公募基金的“标配”。春节过后，画风突变，竟有券商突然唱空，表示“未来仍有明显下跌空间，建议逢高出货”，到底发生了什么？此前外资也是一直买买，而近10日，外资卖出金额33亿元，20日卖出金额更高达45亿元，现在开始“失宠”宁王了。
+美国网友评论：When it comes to foreign correspondents reporting on the Olympics, Beijing thinks “No news, is good news”. *(翻译：对于外国记者报道奥运会，北京认为“没有消息就是好消息”。)*
 
-也许是嗅觉敏感的资本嗅到了山雨欲来的血腥味道，楼倒屋塌时，逃跑的速度决定了生还的机率。内外夹击下，“失宠”的宁王该何去何从？但愿宁王安好。
+事后，荷兰记者达斯在推特上写道：“与此同时，另一个人拿走了我们的灯光装置。当被问到时，他们无法告诉我们做错了什么。最后我们在拐角处的停车场继续我们的电视直播。” “最近几周，我们和几位外国同事一样，在报道奥运会相关话题时，多次被警方阻挠或拦下。”
+![](https://assets.gnews.org/wp-content/uploads/2022/02/Slide2-1.jpg)
+达斯推文截图
+达斯推文：“因此，很难像国际奥委会声称的那样将昨晚的事件视为孤立事件，尽管这种干扰很少在现场直播中发生。现在重新开始工作。”
+![](https://assets.gnews.org/wp-content/uploads/2022/02/Slide3.jpg)
+达斯推文截图
+法国24频道记者安东尼·莫雷尔（Antoine Morel）在推特上发文表示，中共国给他们指派了一名所谓的“导游”，此人一直跟踪他们，一旦发现被采访者偏离官方话语，这名“导游”就会把他们拉走。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/Slide4.jpg)
+安东尼·莫雷尔推文截图
+美国专题报道新闻公司（Feature Story News）的记者帕特里克·霍克（Patrick Fok）在推特上写道：“我在王府井被安保人员拦住，我出示了记者证，被告知不能采访人们关于冬奥会的感受。”
+![](https://assets.gnews.org/wp-content/uploads/2022/02/Slide5.jpg)
+记者帕特里克·霍克推文截图
+除了对外国媒体记者的监控、限制，对于运动员们的抱怨，中共国也按照对待中国老百姓的办法处理——逼他们删除负面信息。
 
-消息来源：[宁德时代大跌超5%失守500元大关，自历史高点已大跌近三成，跌到位了吗？](https://stock.stcn.com/djjd/202202/t20220211_4145588.html)
+芬兰运动员的宿舍发生严重漏水事故，一些运动员将现场照片及视频上传到了Twitter和Instagram上，然后就受到中共国压力，要求他们删除相关信息。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/Slide6-2.jpg)
+Reddit网站相关帖文![](https://assets.gnews.org/wp-content/uploads/2022/02/Slide7-4.jpg)
+网传中共国冬奥会相关人员聊天
+控制媒体、管控舆论，是中共愚弄、统治人民的一贯手段，此次用到参加冬奥会的外国人身上也不是什么新鲜事。在2022寅虎灭共年这一重要时期，中共的愚蠢与疯狂只会让更多人认清它的邪恶，从而加速其灭亡！
 
-*编辑：东京樱花团/知了知了
-发布：东京樱花团/平安卿卿*
-![](https://assets.gnews.org/wp-content/uploads/2022/02/%E4%BA%8C%E7%BB%B4%E7%A0%81.jpg)
+参考消息：
+
+大纪元：[被尾随 被监视 多国记者谈冬奥报导境遇](https://www.epochtimes.com/gb/22/2/8/n13563606.htm)
+
+推特：荷兰NOS 记者[达斯推文](https://twitter.com/sjoerddendaas/status/1489926485536391170?ref_src=twsrc%5Etfw%7Ctwcamp%5Etweetembed%7Ctwterm%5E1489926485536391170%7Ctwgr%5E%7Ctwcon%5Es1_&amp;ref_url=https%3A%2F%2Fwww.epochtimes.com%2Fgb%2F22%2F2%2F8%2Fn13563606.htm)
+
+推特：法国24频道记者[安东尼推文](https://twitter.com/Antwanmorel/status/1490214278837653504)
+
+推特：美国专题报道记者[霍克推文](https://twitter.com/PaddyFok/status/1490528612650713088?ref_src=twsrc%5Etfw%7Ctwcamp%5Etweetembed%7Ctwterm%5E1490528612650713088%7Ctwgr%5E%7Ctwcon%5Es1_&amp;ref_url=https%3A%2F%2Fwww.epochtimes.com%2Fgb%2F22%2F2%2F8%2Fn13563606.htm)
+
+Reddit：[Finland’s Olympic athlete dormitory in Beijing experienced a serious water leakage today. Some Finnish athletes posted this incident on Twitter and Instagram … and they were told to delete them by the Chinese authorities](https://www.reddit.com/r/China/comments/spwrtv/finlands_olympic_athlete_dormitory_in_beijing/)
+
+推特：[灭霸小米(澳喜特战旅) ：冬奥村，芬兰选手房间水管爆了，中共第一时间找到该名选手，想要解决一下提出问题的人](https://twitter.com/V56445280/status/1492092319692394498)
+
+编辑：云彩
+![](https://assets.gnews.org/wp-content/uploads/2022/02/澳喜图标2-1.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
