--- a/gnews/4.md
+++ b/gnews/4.md
@@ -1,42 +1,25 @@
 ---
-title: 乔·罗根拒绝一亿美元薪酬：就待在Spotify
+title: 中日财经爆┃“宁王”失宠
 ---
-`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/1994477/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1994515/)
 
-素材翻译： Jenny Ball
+撰稿：东京樱花团/华夏伊人
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image-1194.png)[图片来源](https://www.google.com/imgres?imgurl=https%3A%2F%2Fx0.ifengimg.com%2Fres%2F2021%2F8F38AC2D527E94536D36FEB0AB6E689ABE840E9F_size113_w998_h614.jpeg&amp;imgrefurl=https%3A%2F%2Fwww.tiantian9527.com%2Fnews%2F23029371.html&amp;tbnid=oUuhXRUz7Dj4HM&amp;vet=12ahUKEwi88Oj_5fn1AhUKspQKHe1-DCcQMygCegUIARC9AQ..i&amp;docid=ma88AApCqfAHHM&amp;w=998&amp;h=614&amp;q=%E5%AE%81%E5%BE%B7%E6%97%B6%E4%BB%A3&amp;ved=2ahUKEwi88Oj_5fn1AhUKspQKHe1-DCcQMygCegUIARC9AQ)
+2月10日，宁德时代开盘1小时跌幅超过8%，盘中加速下跌，最大跌幅达9%，股价跌破500元整数关口，成交量超100亿，市值蒸发1000亿。春节后四个交易日已经下跌近15%，市值蒸发2000亿元，股价创去年10月以来新低。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-1187.png)乔·罗根（Joe Rogan）于 2021 年 7 月 9 日在内华达州拉斯维加斯的 T-Mobile 竞技场参加 UFC 264 的称重仪式。（Stacy Revere/Getty Images）
+2022年1月，宁德时代发布的业绩预告称，其去年净利润为140亿元——165亿元之间，同比增长150%——195%，这是宁德时代上市以来的最高利润水平。2022年各大机构更是对其盈利预期看到300亿元的净利润。
 
-喜剧演员乔·罗根周二在德州告诉观众，他不会接受视频平台 Rumble 提供的 1 亿美元独家主持他的节目的报价。
+尽管业绩增幅超预期，机构也给了很高的评价，为什么股价不涨反跌呢？现在，不仅仅是资金面对宁德时代不友好，就连消息面也开始唱衰：可能遭到美国制裁、核心客户“出逃”、新的储能解决方案出现等等。
 
-当罗根在 Spotify 的未来存在争议之际，Rumble的首席执行官本周在一篇广为流传的社交媒体帖子中向他提供了这份合同。在过去的几周里，罗根一直是各个在线平台强烈攻击的目标，以期迫使 Spotify 删除他关于 COVID-19 讨论的播客内容。
+宁德时代在资本市场也比较受欢迎，去年三季度宁德时代还一举超过了茅台成为公募基金的头号重仓股，也是各大公募基金的“标配”。春节过后，画风突变，竟有券商突然唱空，表示“未来仍有明显下跌空间，建议逢高出货”，到底发生了什么？此前外资也是一直买买，而近10日，外资卖出金额33亿元，20日卖出金额更高达45亿元，现在开始“失宠”宁王了。
 
-“不，Spotify 莫名其妙地和我连在了一起，让我们看看会发生什么，”罗根在德克萨斯州奥斯汀的活动中说。
+也许是嗅觉敏感的资本嗅到了山雨欲来的血腥味道，楼倒屋塌时，逃跑的速度决定了生还的机率。内外夹击下，“失宠”的宁王该何去何从？但愿宁王安好。
 
-本周早些时候，Rumble 首席执行官克里斯·帕夫洛夫斯基（Chris Pavlovski） 在一封信中写道，“我们愿意为你提供 1 亿”来使用 Rumble，Rumble 被视为 YouTube 或 TikTok 等视频平台的新兴替代品。
+消息来源：[宁德时代大跌超5%失守500元大关，自历史高点已大跌近三成，跌到位了吗？](https://stock.stcn.com/djjd/202202/t20220211_4145588.html)
 
-“你在四年内，以 1 亿美元的价格，将你所有的节目带到 Rumble，无论新旧，没有审查，你看如何？”巴甫洛夫斯基补充说， “这是我们拯救世界的机会。是的，这是完全合法的。”
-
-围绕 Spotify 的争议始于创作歌手尼尔·杨（Neil Young） 要求流媒体音乐服务，要么删除他的音乐，要么删除罗根的节目。后来，Spotify 的一位发言人表示，将删除杨的歌曲，尽管这家总部位于瑞典的公司表示，将在某些播客中添加有关 COVID-19 的警告。
-
-上周晚些时候，一段经过大量编辑和断章取义的视频显示，罗根在 10 多年的播客中多次说出“黑人”（Nigger）。一天后，罗根对这段视频发表了讲话，并发表了道歉，但指出这段视频经过编辑，缺乏语境。
-
-然后在周日，Spotify 首席执行官丹尼尔·艾克（Daniel Ek） 宣布媒体将支持罗根，他也是 UFC 的长期评论员。
-
-“虽然我强烈谴责乔所说的话，并且，我同意他从我们的平台上删除过去剧集的决定，但我意识到，有些人会想要更多。我想非常清楚地说明一点——我不相信让乔沉默是答案，”埃克在一份声明中说。
-
-他补充说：“我们应该在内容范围有明确的界限，并在跨越时采取行动，但取消声音是一个下坡路。要更广泛地看待这个问题，批判性思维和公开辩论，才能推动真正和必要的进展。”
-
-在 Rumble 给罗根报价信之后，2021 年 12 月与 Rumble 达成交易的“CF收购公司”（ CF Acquisition Corp. VI ）的股票，在本周飙升了约 39%。
-
-素材来源：【theepochtimes.com】[Joe Rogan Turns Down $100 Million Offer: ‘No, Spotify Has Hung in With Me’](https://www.theepochtimes.com/joe-rogan-turns-down-100-million-offer-no-spotify-has-hung-in-with-me_4269489.html?utm_source=Morningbrief&amp;utm_campaign=mb-2022-02-11&amp;utm_medium=email&amp;est=ovHDIK05zb0Uk%2FRxwzeD21imZLSmtfgLUH4SnFc%2FsvpGdWPVfwhadDu6KxrPoV1n196%2BIw%3D%3D)
-
-* * *
-
-审核：文乐
-校对：小东
-发布：花羽
-![](https://assets.gnews.org/wp-content/uploads/2022/02/西喜-3.jpeg)
+*编辑：东京樱花团/知了知了
+发布：东京樱花团/平安卿卿*
+![](https://assets.gnews.org/wp-content/uploads/2022/02/%E4%BA%8C%E7%BB%B4%E7%A0%81.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
