--- a/gnews/3.md
+++ b/gnews/3.md
@@ -1,54 +1,62 @@
 ---
-title: 美参议员提决议谴责中共政府噤声彭帅
+title: 让瑞银伦敦正式立案的英国大法官，也是一位畅销书作家
 ---
-`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/1994478/)
+`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1994524/)
 
-翻译：Lulumi
+作者/编辑：文泓
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-1189.png)2018年5月6日，西班牙马德里，中国选手彭帅在与西班牙选手加宾·穆古鲁扎的第64轮比赛中出场。(路透社图片)
+- ![](https://assets.gnews.org/wp-content/uploads/2022/02/法官.png)图片来源：TopFoto & Twitter
 
-参议员里克·斯科特和马克·华纳带领他们的同事于2月4日提出决议，决议指出，彭帅案件“直接关系到更广泛的国际关注”，即2022年北京冬奥会的言论自由和运动员的安全。它还说，国际奥委会对围绕彭帅的争议的反应，让人怀疑它是否有能力和意愿站出来维护参加北京冬奥会的运动员的人权。
 
-华纳在2月4日的一份新闻稿中说：“随着冬奥会的召开，我们决不能对中共令人不安的侵犯人权行为视而不见，国际奥委会必须加入更广泛的外交努力，争取彭帅的自由和福祉。”
+2月9日的文贵大直播注定载入史册。当节目进行到1小时50分钟时，在郭先生收到一条手机信息后，抑制不住内心的激动振臂一呼，耶！原来是郭先生诉瑞银（UBS）海通证券股票投资的案子，自2015年起，历时七年终于在英国伦敦法院正式立案。郭先生评价，这是打响了新中国联邦直面沼泽地的第一仗，意义非凡。**当日敲下法官槌的是一位英国大法官萨拉·科克瑞尔（Sara Cockerill）**。
 
-该法案的共同提案人玛莎·布莱克本在2月9日的一份电子邮件声明中说，北京已经表明它“愿意让任何质疑他们的人失踪并保持沉默”，她指的是彭帅的案子，他是三届奥运会选手和前顶级双打选手。
+关于此案完成英国申请立案的过程，有媒体零星的报道，对此案稍有涉猎：
+英国高等法院法官周三的裁决，意味着这位中国富商对瑞银提起的诉讼可以进入审判程序。大法官萨拉·科克瑞尔周三裁定，“**事实是，法院将调查的损失，肯定是由瑞银伦敦在2015年7月6日至8日期间的行为当时在伦敦造成的。至少有一种分析认为，损失发生在那里。这本身就产生了一个联系点**”。
 
-去年11月，这位网球运动员在社交媒体上声称她受到一名中国高级官员的性侵后，从公众视野中消失了几周。然而，她最终重新出现并没有缓解国际机构的担忧，官员们说中国共产党无法提供表明她安全的可信证据。
+就此，萨拉·科克瑞尔大法官进入爆料革命战友视线。今天我们期待通过对科克瑞尔大法官生平爱好的介绍，执业经历的分析，还原出一个有血有肉的充满正义感的大法官。
 
-彭帅最近参加了一系列由中国政府组织的活动，包括与国际奥委会主席托马斯·巴赫共进晚餐；接受法国报纸《L’Equipe》的控制性采访，在采访中她由一名中国奥委会官员陪同；参加奥运活动时，她被发现与巴赫交谈。
+萨拉·科克瑞尔在伦敦北郊清福德的一所小学接受教育，然后获得全额奖学金进入汉普顿的埃莉诺·霍勒斯夫人私立中学；接下来她在牛津大学圣安妮学院学习法律，1989年获得法学一等学位，并获得牛津的埃尔登奖学金。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-1191.png)2022年2月8日，国际奥委会主席托马斯·巴赫在北京首钢大空港举行的2022年北京冬奥会第四天的女子自由式滑雪大空港决赛前与彭帅交谈。(盖蒂图片)
+在1990年她获得律师资格，1991年至2017年在商业律师协会执业，在各种法院和仲裁庭的国际商法方面积累了丰富的经验。在2011年被任命为女王大律师（该荣誉头衔旨在表彰对法律专业或公共生活做出重大贡献的律师）。她擅长包括航运和国际贸易交易、保险和再保险索赔、法律冲突和民事诉讼中的强制证据所引起的一系列争议。她也是《民事诉讼中的强制证据的法律与事务》（2012出版）一书的作者。
 
-在2月6日接受《L’Equipe》采访时，彭帅说她去年11月在社交媒体上对前副总理张高丽的性侵犯指控引发了一场“巨大的误解”。她收回她的指控，并否认在提出指控后失踪数周。这位36岁的网球名将还宣布了她的退役。
+在被任命大法官之前，她在各种仲裁程序中担任仲裁员，并自2016年起担任商事法庭和行政法院的副高等法院法官。2017年首席大法官指派科克瑞尔大法官到王座法庭担任商业法庭的提名法官，科克瑞尔大法官于2017年11月1日16时45分由首席大法官宣誓就职。
 
-女子网球协会首席执行官史蒂夫·西蒙2月8日说，彭帅首次接受外国新闻媒体的采访，“并没有减轻我们对她之前指控的任何担忧”。该体育机构已经无限期地停止了在中国的所有比赛。
+工作之余，科克瑞尔又是一位深谙英国中世纪历史的文艺青年，她的志愿是成为一名历史学家，这让她在业余时间笔耕不辍。她的两本反映中世纪英国王室的传记小说《卡斯蒂利亚埃莉诺传记》于2014年出版，《阿基坦的埃莉诺传记》于2019年出版。后者入围著名英国历史畅销书作家丹·琼斯推荐2019年50本最佳历史书籍之一（书籍如下图）。
 
-国际奥委会是彭帅失踪后第一个接受采访的国际机构，它不加批判地转述彭帅关于她“安全和健康”的说法，引起了特别的关注。
+- ![](https://assets.gnews.org/wp-content/uploads/2022/02/811-1.png)图片来源：bookdepository.com
 
-布莱克本在一篇推特文章中暗示，国际奥委会正在与中共合作。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-1193.png)图片来源：theepochtimes.com
+从其出色的律政履历和独特的历史作家背景来看，科克瑞尔绝对是一个不可多得的专才。在专业的法官工作中，大法官的出手绝对不容小觑：
 
-“国际奥委会的行为与美国政府、人权组织、女子网球协会WTA以及其他国际机构和个人为确保彭帅的安全所做的努力背道而驰，”该决议写道。
+2020年11月23日，一名伦敦法官周一驳回了一项诉讼，指控苏格兰皇家银行在未经适当授权的情况下签发价值数千英镑的支票；
 
-华纳在一份声明中说：“国际奥委会不愿意明确和有力地站出来反对中共，并呼吁对彭帅的安全和自由作出独立的保证，这强烈表明该委员会愿意将与中国的关系置于运动员的安危之上。”
+2021年8月12日，英国政府被指控非法补贴化石燃料，主审法官科克瑞尔；
 
-他补充说：“国际奥委会必须加入更广泛的外交努力，争取彭帅的自由和福祉。”
+2022年1月月21日，法官萨拉·科克瑞尔在高等法院表示，律师纪律法庭去年年初将托尼·吉斯从律师名单中剔除是正确的。
 
-国际奥委会没有立即回应《大纪元时报》的评论请求。
+西方国家的司法独立起始于1701年英国颁布《和解法案》，自该法案以后，只有通过议会两院签署《致女王书》，才有可能将高级法官免职。郭先生在大直播中，对美国的司法独立深信不疑。
 
-该决议案的共同提案人还有：谢利·摩尔·卡皮托、谢罗德·布朗、约翰·霍文、罗恩·怀登、特德·克鲁兹、杰夫·默克利、麦克·布朗、克里斯·冯·赫兰、鲍勃·凯西、汤姆·科顿、拉斐尔·华诺克、罗恩·约翰逊、让娜·沙希恩。
+经过上述的脉络梳理，我们对科克瑞尔大法官有了一些感性的认识，我们相信，上天正在眷顾爆料革命。当爆料革命进入攻坚阶段，地球人都知道瑞银在金融圈地位和资金实力，但就有一位极富正义感的英国大法官站了出来助力新中国联邦。
 
-去年12月，一项类似的决议在美国众议院一致通过。
+经过郭先生不断地启蒙和开智，现在我们知道，UBS瑞银是决定世界命运的沼泽地势力以及中共盗国贼家族重要的财富聚集地，该金融帝国内隐藏着数百年来所累积的上百万亿美元财富和黑账。期待此案在伦敦立案后，未来在全球正义力量的帮助下，撬开瑞银的秘密数据库大门，找回中共盗国贼在西方藏匿的巨额资产，打开灭共的最后一道大门。
 
-素材链接：[theepochtimes.com][US Senators Introduce Resolution Condemning Beijing’s Silencing of Peng Shuai](https://www.theepochtimes.com/us-senators-introduce-resolution-condemning-beijings-silencing-of-peng-shuai_4269086.html)
+参考链接：
+1、[Mrs Justice Cockerill | Courts and Tribunals Judiciary](https://www.judiciary.uk/publications/mrs-justice-cockerill/)
+2、[Sara Cockerill Author homepage](https://www.saracockerill.com/)
+3、[Simon Bryan QC and Sara Cockerill QC Appointed as Justices of the High Court – Essex Court Chambers](https://essexcourt.com/simon-bryan-qc-sara-cockerill-qc-appointed-justices-high-court/)
+4、[London Judge Greenlights Chinese Billionaire’s Case Against UBS (wealthbriefing.com)](https://www.wealthbriefing.com/html/article.php?id=193674)
+5、[Current Judges (commercialcourt.london)](https://www.commercialcourt.london/current-judges)
+6、[Subscribe to read | Financial Times (ft.com)](https://www.ft.com/content/3e9c5459-cda0-4209-9b81-18fc1dbf51f5)
+7、[UK government accused of illegally subsidising fossil fuels | Euronews](https://www.euronews.com/green/2021/12/08/uk-government-accused-of-illegally-subsidising-fossil-fuels)
+8、[Independence | Courts and Tribunals Judiciary](https://www.judiciary.uk/about-the-judiciary/the-judiciary-the-government-and-the-constitution/jud-acc-ind/independence/#:~:text=The%20fundamental%20concept%20of%20judicial,hold%20office%20during%20good%20behaviour.)
 
-* * *
+发布：文泓
+更多资讯，请关注：
+[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/76QVRChsgU)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
-*审核：文乐
-校对：阿伯塔
-发稿：Nuevo唐人*
-![](https://assets.gnews.org/wp-content/uploads/2022/02/西喜-3.jpeg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
