--- a/gnews/5.md
+++ b/gnews/5.md
@@ -1,204 +1,54 @@
 ---
-title: 喜支付体现人类无条件支付的本能
+title: 美参议员提决议谴责中共政府噤声彭帅
 ---
-`洛杉矶盘古农场 HIMALAYA LA PANGU` [轉載自GNews](https://gnews.org/zh-hans/1994476/)
+`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/1994478/)
 
-[https://gtv.org/video/id=6205b50bb0af02660af230c2](https://gtv.org/video/id=6205b50bb0af02660af230c2)
+翻译：Lulumi
 
-它一下就秒到了
-Por qué eso llega en cuestión de segundo
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image-1189.png)2018年5月6日，西班牙马德里，中国选手彭帅在与西班牙选手加宾·穆古鲁扎的第64轮比赛中出场。(路透社图片)
 
-我们这叫在线支付
-Nosotros lo llamamos “pago en línea”
+参议员里克·斯科特和马克·华纳带领他们的同事于2月4日提出决议，决议指出，彭帅案件“直接关系到更广泛的国际关注”，即2022年北京冬奥会的言论自由和运动员的安全。它还说，国际奥委会对围绕彭帅的争议的反应，让人怀疑它是否有能力和意愿站出来维护参加北京冬奥会的运动员的人权。
 
-我们不是在线买卖
-Esto no es compra y venta en línea
+华纳在2月4日的一份新闻稿中说：“随着冬奥会的召开，我们决不能对中共令人不安的侵犯人权行为视而不见，国际奥委会必须加入更广泛的外交努力，争取彭帅的自由和福祉。”
 
-只要对方是卖车的
-Si la otra persona quiere vender el carro
+该法案的共同提案人玛莎·布莱克本在2月9日的一份电子邮件声明中说，北京已经表明它“愿意让任何质疑他们的人失踪并保持沉默”，她指的是彭帅的案子，他是三届奥运会选手和前顶级双打选手。
 
-还有卖画的
-Y el que vende cuadros
+去年11月，这位网球运动员在社交媒体上声称她受到一名中国高级官员的性侵后，从公众视野中消失了几周。然而，她最终重新出现并没有缓解国际机构的担忧，官员们说中国共产党无法提供表明她安全的可信证据。
 
-咱俩说好了叫约定式付款
-Si nosotros dos ya acordamos esto se llama “pago convenido”
+彭帅最近参加了一系列由中国政府组织的活动，包括与国际奥委会主席托马斯·巴赫共进晚餐；接受法国报纸《L’Equipe》的控制性采访，在采访中她由一名中国奥委会官员陪同；参加奥运活动时，她被发现与巴赫交谈。
 
-跟这个交易没毛关系
-No tiene ninguna relación con esta transacción
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image-1191.png)2022年2月8日，国际奥委会主席托马斯·巴赫在北京首钢大空港举行的2022年北京冬奥会第四天的女子自由式滑雪大空港决赛前与彭帅交谈。(盖蒂图片)
 
-可人类给它设定好了身份证、年龄、资金来源
-Pero el ser humano lo configuró con cédula de identidad, edad y fuente de fondos
+在2月6日接受《L’Equipe》采访时，彭帅说她去年11月在社交媒体上对前副总理张高丽的性侵犯指控引发了一场“巨大的误解”。她收回她的指控，并否认在提出指控后失踪数周。这位36岁的网球名将还宣布了她的退役。
 
-这是全人类最黑暗的金融时代
-Esta es una Era financiera más oscura en toda la humanidad
+女子网球协会首席执行官史蒂夫·西蒙2月8日说，彭帅首次接受外国新闻媒体的采访，“并没有减轻我们对她之前指控的任何担忧”。该体育机构已经无限期地停止了在中国的所有比赛。
 
-就是因为它造了太多假
-Porque en eso se hacen muchas falsificaciones
+国际奥委会是彭帅失踪后第一个接受采访的国际机构，它不加批判地转述彭帅关于她“安全和健康”的说法，引起了特别的关注。
 
-我们有个战友 台湾的
-Tenemos un compañero luchador de Taiwán
+布莱克本在一篇推特文章中暗示，国际奥委会正在与中共合作。
 
-这不在我们农场的战友
-No está en nuestra finca
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image-1193.png)图片来源：theepochtimes.com
 
-一位女士 很棒的
-Una excelente dama
+“国际奥委会的行为与美国政府、人权组织、女子网球协会WTA以及其他国际机构和个人为确保彭帅的安全所做的努力背道而驰，”该决议写道。
 
-我的老朋友了 93岁今年
-Es mi viejo amigo, este año cumple los 93 años
+华纳在一份声明中说：“国际奥委会不愿意明确和有力地站出来反对中共，并呼吁对彭帅的安全和自由作出独立的保证，这强烈表明该委员会愿意将与中国的关系置于运动员的安危之上。”
 
-她说文贵
-Ella dijo: “Wengui
+他补充说：“国际奥委会必须加入更广泛的外交努力，争取彭帅的自由和福祉。”
 
-我就等着这个
-Yo he estado esperando esto”
+国际奥委会没有立即回应《大纪元时报》的评论请求。
 
-所以说人这个智商
-Por eso el coeficiente intelectual de una persona
+该决议案的共同提案人还有：谢利·摩尔·卡皮托、谢罗德·布朗、约翰·霍文、罗恩·怀登、特德·克鲁兹、杰夫·默克利、麦克·布朗、克里斯·冯·赫兰、鲍勃·凯西、汤姆·科顿、拉斐尔·华诺克、罗恩·约翰逊、让娜·沙希恩。
 
-我在说这个93岁的一个台湾人
-La taiwanesa de 93 años que estoy diciendo
+去年12月，一项类似的决议在美国众议院一致通过。
 
-昨天下午上线
-Ayer en la tarde se conectó
-
-她咔咔咔就转几笔
-Y así de la nada ya hizo varias transacciones
-
-人家93岁了
-Ella tiene 93 años
-
-人家啪啪啪自己处理完
-Y en un dos por tres ella misma resolvió
-
-她说七哥
-Ella dijo “Miles
-
-我把我这个手里边120万HDO
-Yo transferí 1.2 millones HDO que tenía en la mano
-
-转了还剩一万多
-Ahora me quedan 10 mil y pico”
-
-就这么简单
-Así de fácil
-
-而且就用自己的手机
-Además, con su propio celular
-
-大家记住第一个功能的核心
-Todos recuerden la primera función esencial
-
-无条件的交易支付
-Pago de transacción incondicional
-
-是你一生中找回你人类的财富的最本能
-Es el mayor instinto en la vida para recuperar tu riqueza humana
-
-第二条 买画
-Segundo, comprar cuadros
-
-吃饭、餐厅
-Comer, los restaurantes
-
-只要你足够有智慧
-Si tienes suficiente sabiduría
-
-你能省下完全
-Te podrás ahorrar totalmente
-
-你不需要过去支付的5%、10%、20%的钱
-No necesitas ir a pagar como en el pasado el 5, 10, 20% de dinero
-
-包括所有全世界的交易都是要付交易费
-Incluyendo todas las transacciones del mundo entero, debes pagar una tarifa por transacción
-
-这是给你0, 这个问题
-Este te está dando 0, este problema
-
-七哥跟他们奋斗了很长时间
-Yo tuve una lucha muy larga con ellos
-
-就那个王八蛋律师特别坏，他说
-Ese abogado infeliz muy malo, dijo
-
-必须收1.52什么高收费呀高风险
-Debes cobrar 1.52, que si tarifa alta, alto riesgo
-
-我说你
-Le dije
-
-要收1毛钱我就不
-Si tu vas a cobrar un centavo
-
-不会让新中国联邦任何人用你这个东西
-No dejaré que ninguno del Nuevo Estado Federal de China utilice esta cosa tuya
-
-必须是0交易
-Debe ser transacción 0
-
-为什么，我说我们战友没事了
-Por qué, le dije que nuestros compañeros luchadores si no tienen nada que hacer
-
-未来就是划钱玩
-En un futuro podrá jugar deslizando el dinero
-
-就这么简单 没事儿了
-Así de fácil, si no tiene nada que hacer
-
-睡觉前两口子就转钱玩
-Antes de dormir la pareja se pone a jugar transfiriendo dinero
-
-你给我100
-Tu me das 100
-
-我给你1000
-Yo te doy 1000
-
-你给我1000
-Tu me das 1000
-
-我给你，就划钱玩 咋的
-Yo te doy, así juegan deslizando el dinero, qué pasa
-
-你要是收费
-Si vas a cobrar
-
-我们就没有这个兴趣了
-Nosotros no tendremos este hobby
-
-你知道这意味着什么
-Sabes qué significado tiene esto
-
-兄弟姐妹们
-Hermanos y hermanas
-
-我们要让新中国联邦战友走出家门
-Nosotros queremos que los compañeros luchadores del Nuevo Estado Federal de China salgan de su casa
-
-去推销Hpay 的时候，你告诉他这是免费的
-Y promocionen el Hpay, le puedan decir que esto es gratis
+素材链接：[theepochtimes.com][US Senators Introduce Resolution Condemning Beijing’s Silencing of Peng Shuai](https://www.theepochtimes.com/us-senators-introduce-resolution-condemning-beijings-silencing-of-peng-shuai_4269086.html)
 
 * * *
 
-日期：02/09/2022
-原视频标题：喜支付体现人类无条件支付的本能
-H Pay refleja el instinto del pago incondicional del ser humano
-原视频日期：02/07/2022
-原视频网址：[**https://gettr.com/post/psxnq73faf**](https://gettr.com/post/psxnq73faf)
-任务编号：KC451(3697)
-视频时间段：0:00-02:19
-西听校：洛杉矶盘古农场- 小文萱
-翻译：洛杉矶盘古农场- 霙霙（文霙）
-翻译终校：洛杉矶盘古农场- 小文萱
-字幕+视频制作：洛杉矶盘古农场-天涯行
-审片：洛杉矶盘古农场-银龙
-发布：洛杉矶盘古农场-恩典
-[![](https://assets.gnews.org/wp-content/uploads/2021/03/WhatsApp-Image-2021-06-26-at-22.05.30.jpeg)](https://discord.gg/2vuvRm7z6U)
-洛杉矶盘古农场欢迎您加入:(或点击上方图片）
-
-[https://discord.gg/2vuvRm7z6U](https://discord.gg/2vuvRm7z6U)
-
+*审核：文乐
+校对：阿伯塔
+发稿：Nuevo唐人*
+![](https://assets.gnews.org/wp-content/uploads/2022/02/西喜-3.jpeg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
