--- a/gnews/7.md
+++ b/gnews/7.md
@@ -1,44 +1,204 @@
 ---
-title: 拜登自曝曾因颅动脉瘤住院
+title: 喜支付体现人类无条件支付的本能
 ---
-`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/1994457/)
+`洛杉矶盘古农场 HIMALAYA LA PANGU` [轉載自GNews](https://gnews.org/zh-hans/1994476/)
 
-翻译：Jenny Ball
+[https://gtv.org/video/id=6205b50bb0af02660af230c2](https://gtv.org/video/id=6205b50bb0af02660af230c2)
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-1183.png)图片来源：republicbrief.com
+它一下就秒到了
+Por qué eso llega en cuestión de segundo
 
-周四，民主党人乔·拜登出席会议讨论降低处方药成本，并借此机会谈论他个人与脑动脉瘤的斗争。
+我们这叫在线支付
+Nosotros lo llamamos “pago en línea”
 
-他对脑瘤的承认发生在一个有趣的时间点，恰逢本周早些时候华盛顿一些共和党议员要求拜登接受认知测试，因为他们担心拜登的“精神衰退”已经“变得更加明显”，并可能阻碍他的判断。
+我们不是在线买卖
+Esto no es compra y venta en línea
 
-拜登在一些公开场合谈到他自己的医疗费经历时语无伦次，这被“转折点”成员丹尼·德·乌尔比纳（Danny De Urbina）重点强调。
+只要对方是卖车的
+Si la otra persona quiere vender el carro
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-1185.png)图片来源：republicbrief.com
+还有卖画的
+Y el que vende cuadros
 
-事实是，华盛顿早就知道拜登的健康问题。
+咱俩说好了叫约定式付款
+Si nosotros dos ya acordamos esto se llama “pago convenido”
 
-2020 年 10 月，福克斯新闻主持人玛丽亚·巴蒂罗莫 (Maria Bartiromo) 告诉全国观众：“我的消息来源很可靠，两个医生告诉我说，乔·拜登有两个脑动脉瘤，他需要向人们解释这一点。”
+跟这个交易没毛关系
+No tiene ninguna relación con esta transacción
 
-据当地特拉华新闻报道，自 1988 年以来，脑动脉瘤大部分都被掩盖了。
+可人类给它设定好了身份证、年龄、资金来源
+Pero el ser humano lo configuró con cédula de identidad, edad y fuente de fondos
 
-保守派简报报道了 2020 年，希尔呼吁对拜登进行医学评估：
+这是全人类最黑暗的金融时代
+Esta es una Era financiera más oscura en toda la humanidad
 
-“一群共和党议员再次向乔·拜登总统施压，要求他进行认知测试，因为他们认为，他的‘精神衰退’已经‘变得更加明显’，可能会阻碍他的判断。
+就是因为它造了太多假
+Porque en eso se hacen muchas falsificaciones
 
-近 40 名共和党国会议员希望 79 岁的拜登效仿他的前任、前总统川普开创的先例，因为最近的民意调查越来越多地显示，越来越多的美国人不确定，拜登的心理是否适合担任这项艰巨的总统工作。
+我们有个战友 台湾的
+Tenemos un compañero luchador de Taiwán
 
-周二，在前白宫医生、德克萨斯州众议员罗尼·杰克逊的带领下，其他 37 名共和党同事签署了一封致拜登的信，他们在信中表示，他们“担心”他的“当前认知状态”。
+这不在我们农场的战友
+No está en nuestra finca
 
-“这不是党派问题。当我与川普总统讨论进行认知测试时，他急于向美国人民保证，并把假新闻媒体的故事戳穿，”杰克逊在信中写道。 “为什么拜登总统不这样做呢？”
+一位女士 很棒的
+Una excelente dama
 
-素材链接：[republicbrief.com] [Biden Reveals He Was Hospitalized For Cranial Aneurysms](http://republicbrief.com/biden-reveals-he-was-hospitalized-for-cranial-aneurysms/)
+我的老朋友了 93岁今年
+Es mi viejo amigo, este año cumple los 93 años
+
+她说文贵
+Ella dijo: “Wengui
+
+我就等着这个
+Yo he estado esperando esto”
+
+所以说人这个智商
+Por eso el coeficiente intelectual de una persona
+
+我在说这个93岁的一个台湾人
+La taiwanesa de 93 años que estoy diciendo
+
+昨天下午上线
+Ayer en la tarde se conectó
+
+她咔咔咔就转几笔
+Y así de la nada ya hizo varias transacciones
+
+人家93岁了
+Ella tiene 93 años
+
+人家啪啪啪自己处理完
+Y en un dos por tres ella misma resolvió
+
+她说七哥
+Ella dijo “Miles
+
+我把我这个手里边120万HDO
+Yo transferí 1.2 millones HDO que tenía en la mano
+
+转了还剩一万多
+Ahora me quedan 10 mil y pico”
+
+就这么简单
+Así de fácil
+
+而且就用自己的手机
+Además, con su propio celular
+
+大家记住第一个功能的核心
+Todos recuerden la primera función esencial
+
+无条件的交易支付
+Pago de transacción incondicional
+
+是你一生中找回你人类的财富的最本能
+Es el mayor instinto en la vida para recuperar tu riqueza humana
+
+第二条 买画
+Segundo, comprar cuadros
+
+吃饭、餐厅
+Comer, los restaurantes
+
+只要你足够有智慧
+Si tienes suficiente sabiduría
+
+你能省下完全
+Te podrás ahorrar totalmente
+
+你不需要过去支付的5%、10%、20%的钱
+No necesitas ir a pagar como en el pasado el 5, 10, 20% de dinero
+
+包括所有全世界的交易都是要付交易费
+Incluyendo todas las transacciones del mundo entero, debes pagar una tarifa por transacción
+
+这是给你0, 这个问题
+Este te está dando 0, este problema
+
+七哥跟他们奋斗了很长时间
+Yo tuve una lucha muy larga con ellos
+
+就那个王八蛋律师特别坏，他说
+Ese abogado infeliz muy malo, dijo
+
+必须收1.52什么高收费呀高风险
+Debes cobrar 1.52, que si tarifa alta, alto riesgo
+
+我说你
+Le dije
+
+要收1毛钱我就不
+Si tu vas a cobrar un centavo
+
+不会让新中国联邦任何人用你这个东西
+No dejaré que ninguno del Nuevo Estado Federal de China utilice esta cosa tuya
+
+必须是0交易
+Debe ser transacción 0
+
+为什么，我说我们战友没事了
+Por qué, le dije que nuestros compañeros luchadores si no tienen nada que hacer
+
+未来就是划钱玩
+En un futuro podrá jugar deslizando el dinero
+
+就这么简单 没事儿了
+Así de fácil, si no tiene nada que hacer
+
+睡觉前两口子就转钱玩
+Antes de dormir la pareja se pone a jugar transfiriendo dinero
+
+你给我100
+Tu me das 100
+
+我给你1000
+Yo te doy 1000
+
+你给我1000
+Tu me das 1000
+
+我给你，就划钱玩 咋的
+Yo te doy, así juegan deslizando el dinero, qué pasa
+
+你要是收费
+Si vas a cobrar
+
+我们就没有这个兴趣了
+Nosotros no tendremos este hobby
+
+你知道这意味着什么
+Sabes qué significado tiene esto
+
+兄弟姐妹们
+Hermanos y hermanas
+
+我们要让新中国联邦战友走出家门
+Nosotros queremos que los compañeros luchadores del Nuevo Estado Federal de China salgan de su casa
+
+去推销Hpay 的时候，你告诉他这是免费的
+Y promocionen el Hpay, le puedan decir que esto es gratis
 
 * * *
 
-*审核：文乐
-校对：小东
-发稿：Nuevo唐人*
-![](https://assets.gnews.org/wp-content/uploads/2022/02/西喜-3.jpeg)
+日期：02/09/2022
+原视频标题：喜支付体现人类无条件支付的本能
+H Pay refleja el instinto del pago incondicional del ser humano
+原视频日期：02/07/2022
+原视频网址：[**https://gettr.com/post/psxnq73faf**](https://gettr.com/post/psxnq73faf)
+任务编号：KC451(3697)
+视频时间段：0:00-02:19
+西听校：洛杉矶盘古农场- 小文萱
+翻译：洛杉矶盘古农场- 霙霙（文霙）
+翻译终校：洛杉矶盘古农场- 小文萱
+字幕+视频制作：洛杉矶盘古农场-天涯行
+审片：洛杉矶盘古农场-银龙
+发布：洛杉矶盘古农场-恩典
+[![](https://assets.gnews.org/wp-content/uploads/2021/03/WhatsApp-Image-2021-06-26-at-22.05.30.jpeg)](https://discord.gg/2vuvRm7z6U)
+洛杉矶盘古农场欢迎您加入:(或点击上方图片）
+
+[https://discord.gg/2vuvRm7z6U](https://discord.gg/2vuvRm7z6U)
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
